@@ -55,10 +55,11 @@ $title_prev_msg = 'Vorherige Nachricht';
 $html_theme_label = 'Thema:';
 $html_welcome = 'Willkommen bei %1$s';
 $html_login = 'Anmelden';
-$html_passwd = 'Passwort';
+$html_user_label = 'Benutzer:';
+$html_passwd_label = 'Passwort:';
 $html_submit = 'Ok';
 $html_help = 'Hilfe';
-$html_server = 'Server';
+$html_server_label = 'Server:';
 $html_wrong = 'Der Nutzername oder das Passwort sind falsch';
 $html_retry = 'Nochmal';
 $html_remember = 'Einstellungen speichern';
